--- a/web/res/css/include/_header.scss
+++ b/web/res/css/include/_header.scss
@@ -15,6 +15,7 @@ nav {
     border: none;
     background: transparent;
     color: $white;
+    z-index: 2;
     li { background: $primary-color; }
     a { color: inherit; }
   }
@@ -32,8 +33,7 @@ nav {
 
 }
 
-nav form {
-  display: block;
+nav .search-wrapper {
   padding: 0 5px 0 15px;
   margin: 0;
   position: relative;
@@ -44,12 +44,58 @@ nav form {
     background-size: contain;
     width: 25px;
     height: 25px;
+    cursor: pointer;
   }
 
-  input { display: none !important; }
+  form {
+    display: block;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    z-index: 1;
+    margin: 0;
+    width: 250px;
+    padding: 0;
+    max-height: 0px; // fuer aufklapp-animation
+    overflow: hidden;
+    transition: all 200ms;
+    &::before {
+      @include css-triangle(10px, $primary-color, up);
+      position: absolute;
+      top: 10px;
+      right: .5em;
+      z-index: 1;
+    }
+    &.isOpen {
+      padding-top: 20px;
+      max-height: 100px;
+    }
+  }
 
-  &:hover form input[type="search"], form input[type="search"]:focus {
-//    display: block;
+  input[type="search"] {
+    display: block;
+    width: 100%;
+    height: 50px;
+    margin: 0;
+    padding-right: 50px;
+    border: 5px solid $primary-color;
+    position: relative;
+    z-index: 2;
+  }
+
+  input[type="submit"] {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    z-index: 3;
+    width: 40px;
+    height: 40px;
+    margin: 0;
+    padding: 0;
+    background: transparent url(../img/icon_arrow.svg) no-repeat center center;
+    background-size: 40% 40%;
+    overflow: hidden;
+    text-indent: -999px;
   }
 
 }
