--- a/web/res/css/foundation/_modules.scss
+++ b/web/res/css/foundation/_modules.scss
@@ -1,11 +1,14 @@
-// Foundation Module aktivieren
+//
+// Foundation Module auswaehlen
+// -> Unnoetige Module deaktivieren = Kleinere CSS Dateien
+//
 @include foundation-global-styles;
 @include foundation-xy-grid-classes;
 @include foundation-flex-classes;
 @include foundation-typography;
 @include foundation-forms;
 @include foundation-button;
-@include foundation-accordion;
+//@include foundation-accordion;
 @include foundation-accordion-menu;
 //@include foundation-badge;
 @include foundation-breadcrumbs;
@@ -16,7 +19,7 @@
 @include foundation-menu;
 //@include foundation-menu-icon;
 //@include foundation-drilldown-menu;
-@include foundation-dropdown;
+//@include foundation-dropdown;
 @include foundation-dropdown-menu;
 //@include foundation-responsive-embed;
 @include foundation-label;
@@ -26,8 +29,8 @@
 //@include foundation-pagination;
 //@include foundation-progress-bar;
 //@include foundation-slider;
-@include foundation-sticky;
-@include foundation-reveal;
+//@include foundation-sticky;
+//@include foundation-reveal;
 //@include foundation-switch;
 //@include foundation-table;
 //@include foundation-tabs;
