--- a/web/res/css/include/_heroshot.scss
+++ b/web/res/css/include/_heroshot.scss
@@ -1,10 +1,17 @@
 .heroshot {
   height: 80vh; // fallback
-  height: calc(100vh - 180px);
-  margin: 0 50px 50px;
-  background: $light-gray no-repeat center center;
-  background-size: cover;
+  height: calc(100vh - 50px);
+  max-height: 750px;
+  max-width: $max-width;
+  margin: 0 auto 50px;
+  padding: 0;
   position: relative;
+  
+  .heroshot-inner {
+    height: 100%;
+    background: $light-gray no-repeat center center;
+    background-size: cover;
+  }
 
   .scrolldown {
     width: 70px;
@@ -12,11 +19,29 @@
     background: $body-background url(../img/icon_arrow.svg) no-repeat center center;
     background-size: 50% 50%;
     position: absolute;
-    bottom: -35px;
+    bottom: 35px;
     left: 50%;
     margin-left: -35px;
     border-radius: 100%;
     transform: rotate(90deg);
   }
 
+}
+
+
+// Auf groesseren Geraeten haben wir an den Seiten mehr Abstand
+@include breakpoint(large) {
+  
+  .heroshot {
+    height: calc(100vh - 180px);
+    max-height: 1100px;
+    padding-right: 50px;
+    padding-left: 50px;
+    
+    .scrolldown {
+      bottom: -35px;
+    }
+    
+  }
+  
 }
