--- a/templates/_master.twig
+++ b/templates/_master.twig
@@ -22,15 +22,16 @@
   <div class="off-canvas-wrapper">
 
 
-    <header id="head-menu" data-off-canvas>
+    <header id="head-menu" data-off-canvas data-auto-focus="false">
       <div class="grid-x grid-margin-x align-middle align-justify">
 
-        <div class="cell medium-shrink show-for-medium">
-          <a href="#" title="Zur Startseite"><img src="res/img/logo.svg" width="240" height="90" alt="" /></a>
+        <div class="cell medium-shrink">
+          <a href="#" title="Zur Startseite"><img class="logo" src="res/img/logo.svg" width="240" height="90" alt="" /></a>
         </div>
 
-        <nav class="cell medium-shrink flex-container align-middle">
+        <nav class="cell medium-shrink align-middle">
 
+          
           <ul class="vertical medium-horizontal menu" data-responsive-menu="accordion medium-dropdown">
             <li><a href="#" title="Start">Start</a></li>
             <li><a href="#" title="Aktuelles">Aktuelles</a></li>
@@ -47,14 +48,16 @@
             <li><a href="#" title="Kontakt">Kontakt</a></li>
           </ul>
 
+          
           <div class="search-wrapper">
             <label for="searchphrase" data-toggle="search-form"></label>
-            <form action="#" method="post" id="search-form" data-toggler=".isOpen" class="isOpen">
+            <form action="#" method="post" id="search-form" data-toggler=".isOpen">
               <input type="search" name="s" value="" placeholder="Suchbegriff" required />
               <input type="submit" class="button" value="Suche" title="Suchen" />
             </form>
           </div>
 
+          
         </nav>
 
       </div>
@@ -64,12 +67,13 @@
     <main class="off-canvas-content" data-off-canvas-content>
 
 
-      <div class="hide-for-medium">
-        <button type="button" class="button" data-toggle="head-menu">Menü</button>
+      <div class="hide-for-medium navbar-mobile grid-x grid-padding-x align-middle">
+        <div class="cell shrink"><a href="#menu" class="menu-button" data-toggle="head-menu"><span></span> Menü</a></div>
       </div>
 
 
-      <div class="heroshot" style="background-image:url('res/_demobilder/thin-pixabay-free.jpg');">
+      <div class="heroshot">
+        <div class="heroshot-inner" style="background-image:url('res/_demobilder/thin-pixabay-free.jpg');"></div>
         <a class="scrolldown" href="#start" title="Auf geht's" data-smooth-scroll></a>
       </div>
       <div id="start"></div>
