--- a/web/res/css/foundation/_settings.scss
+++ b/web/res/css/foundation/_settings.scss
@@ -76,14 +76,14 @@ $global-font-size: 16px;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #39B54A,
-  secondary: #767676,
+  primary: #2bbd98,
+  secondary: #4e4f59,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
 );
 $light-gray: #e6e6e6;
-$medium-gray: #cacaca;
+$medium-gray: #aaa;
 $dark-gray: #8a8a8a;
 $black: #222;
 $white: #fff;
@@ -174,8 +174,8 @@ $code-font-weight: $global-weight-normal;
 $code-background: $light-gray;
 $code-border: 1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
-$anchor-color: $primary-color;
-$anchor-color-hover: scale-color($anchor-color, $lightness: -30%);
+$anchor-color: $secondary-color;
+$anchor-color-hover: $primary-color;
 $anchor-text-decoration: none;
 $anchor-text-decoration-hover: none;
 $hr-width: $global-width;
@@ -350,16 +350,16 @@ $closebutton-offset-horizontal: (
   medium: 1rem,
 );
 $closebutton-offset-vertical: (
-  small: 0.33em,
-  medium: 0.5rem,
+  small: 0.66rem,
+  medium: 1rem,
 );
 $closebutton-size: (
   small: 1.5em,
   medium: 2em,
 );
 $closebutton-lineheight: 1;
-$closebutton-color: $dark-gray;
-$closebutton-color-hover: $black;
+$closebutton-color: $primary-color;
+$closebutton-color-hover: $secondary-color;
 
 // 16. Drilldown
 // -------------
@@ -506,7 +506,7 @@ $offcanvas-sizes: (
 $offcanvas-vertical-sizes: (
   small: 250px,
 );
-$offcanvas-background: $light-gray;
+$offcanvas-background: $body-background;
 $offcanvas-shadow: 0 0 10px rgba($black, 0.7);
 $offcanvas-inner-shadow-size: 20px;
 $offcanvas-inner-shadow-color: rgba($black, 0.25);
@@ -517,7 +517,7 @@ $offcanvas-reveal-zindex: 12;
 $offcanvas-transition-length: 0.5s;
 $offcanvas-transition-timing: ease;
 $offcanvas-fixed-reveal: true;
-$offcanvas-exit-background: rgba($white, 0.25);
+$offcanvas-exit-background: rgba($black, .6);
 $maincontent-class: 'off-canvas-content';
 
 // 26. Orbit
