--- a/web/res/css/include/_header.scss
+++ b/web/res/css/include/_header.scss
@@ -2,7 +2,7 @@
 nav {
   text-transform: uppercase;
   font-size: 1rem;
-  font-weight: $header-font-weight;
+  font-weight: $global-weight-medium;
   ul ul { text-transform: none; }
 }
 
@@ -11,6 +11,7 @@ nav {
 // Auf kleinen Geräten wird der Header zu einem Off-Canvas Element
 @include breakpoint(medium down) {
 
+  // Header-Leiste fuer kleine Geraete
   .navbar-mobile {
     height: 65px;
     .menu-button {
@@ -21,10 +22,12 @@ nav {
     }
   }
 
+  // Kopfbereich der Mobilnavigation (inkl Close Button)
   .menu-head {
     min-height: 65px;
   }
 
+  // Hauptmenue Mobil (Aufklapper)
   nav {
     margin-bottom: 2em;
     padding-left: 5px;
@@ -33,6 +36,7 @@ nav {
     .accordion-menu .is-accordion-submenu a { padding-left: 1rem; }
   }
 
+  // Suchfeld
   nav .search-wrapper form {
     display: block;
     margin: 2em 0 0;
@@ -72,10 +76,14 @@ nav {
     margin-left: auto;
     margin-right: auto;
     padding: 5px 10px;
-    &.off-canvas.in-canvas-for-large { overflow: visible; } // Wichtig fuers Aufklapp-Menue
+    &.off-canvas.in-canvas-for-large {
+      width: 100%;
+      overflow: visible; // Wichtig fuers Aufklapp-Menue
+    }
     > .grid-x { min-height: 150px; }
   }
 
+  // Hauptmenue Destop
   nav .menu a.current {
     position: relative;
     &:after {
