--- a/templates/_master.twig
+++ b/templates/_master.twig
@@ -85,8 +85,12 @@
 
 
         <div id="heroshot" data-interchange="[res/_demobilder/thin-600x600_pixabay-free.jpg, small], [res/_demobilder/thin-1200x750_pixabay-free.jpg, medium], [res/_demobilder/thin-1920x1200_pixabay-free.jpg, large]">
+
           <noscript><style>#heroshot{background-image:url(res/_demobilder/thin-1200x750_pixabay-free.jpg)}</style></noscript>
+          <span data-media-source="© EvgeniT, pixabay" title="https://pixabay.com/photo-2902686/" aria-hidden="true"></span>
+
           <a class="scrolldown" href="#start" title="Auf geht's" data-smooth-scroll area-hidden="true"></a>
+
         </div>
         <div id="start"></div>
 
@@ -128,6 +132,7 @@
             <a href="#" class="cell medium-6 large-4 teaser" title="Das ist uns're Zeit">
               <div class="teaser-img-wrapper">
                 <img src="res/_demobilder/beach-1920x1200_pixabay-free.jpg" alt="" />
+                <span data-media-source="© tommydebris, pixabay" title="https://pixabay.com/photo-2850854/" aria-hidden="true"></span>
               </div>
               <div class="teaser-text-wrapper">
                 <h4>Das ist uns're Zeit</h4>
@@ -139,6 +144,7 @@
             <a href="#" class="cell medium-6 large-4 teaser" title="Paris im Herbst">
               <div class="teaser-img-wrapper">
                 <img src="res/_demobilder/bicycle-1920x1200_pixabay-free.jpg" alt="" />
+                <span data-media-source="© jill111, pixabay" title="https://pixabay.com/photo-788733/" aria-hidden="true"></span>
               </div>
               <div class="teaser-text-wrapper">
                 <h4>Paris im Herbst</h4>
@@ -150,6 +156,7 @@
             <a href="#" class="cell medium-6 large-4 teaser" title="Name an der Wand">
               <div class="teaser-img-wrapper">
                 <img src="res/_demobilder/clubs-1920x1200_pixabay-free.jpg" alt="" />
+                <span data-media-source="© designerpoint, pixabay" title="https://pixabay.com/photo-518192/" aria-hidden="true"></span>
               </div>
               <div class="teaser-text-wrapper">
                 <h4>Name an der Wand</h4>
@@ -211,12 +218,15 @@
                 <ul class="orbit-container">
                   <li class="orbit-slide is-active">
                     <img class="orbit-image" src="res/_demobilder/engagement-1920x1200_pixabay-free.jpg" alt="" />
+                    <span data-media-source="© 3194556, pixabay" title="https://pixabay.com/photo-1718244/" aria-hidden="true"></span>
                   </li>
                   <li class="orbit-slide">
                     <img class="orbit-image" src="res/_demobilder/clouds-1920x1200_pixabay-free.jpg" alt="" />
+                    <span data-media-source="© EvgeniT, pixabay" title="https://pixabay.com/photo-2619731/" aria-hidden="true"></span>
                   </li>
                   <li class="orbit-slide">
                     <img class="orbit-image" src="res/_demobilder/thin-1920x1200_pixabay-free.jpg" alt="" />
+                    <span data-media-source="© EvgeniT, pixabay" title="https://pixabay.com/photo-2902686/" aria-hidden="true"></span>
                   </li>
                 </ul>
 
