--- a/web/res/css/main.scss
+++ b/web/res/css/main.scss
@@ -38,6 +38,7 @@ a {
 @import "include/header";
 @import "include/heroshot";
 @import "include/footer";
+@import "include/media-source";
 
 // Widgets
 @import "widgets/basis";
