--- a/templates/_master.twig
+++ b/templates/_master.twig
@@ -85,8 +85,12 @@
 
 
         <div id="heroshot" data-interchange="[res/_demobilder/thin-600x600_pixabay-free.jpg, small], [res/_demobilder/thin-1200x750_pixabay-free.jpg, medium], [res/_demobilder/thin-1920x1200_pixabay-free.jpg, large]">
+
           <noscript><style>#heroshot{background-image:url(res/_demobilder/thin-1200x750_pixabay-free.jpg)}</style></noscript>
+          <span data-media-source="© EvgeniT, pixabay" title="https://pixabay.com/photo-2902686/" aria-hidden="true"></span>
+
           <a class="scrolldown" href="#start" title="Auf geht's" data-smooth-scroll area-hidden="true"></a>
+
         </div>
         <div id="start"></div>
 
@@ -101,7 +105,7 @@
               <p>
                 Und der Tag wird kommen an dem wir alle unsere Gläser heben. Durch die Decke schweben, mit 'nem Toast den
                 hochleben lassen. Auf den ersten, der's packt, den Mutigsten von allen. Der erste, der's schafft. Es wird
-                der Tag sein, an dem wir <strong>die Liebe, die Freiheit und das Leben</strong> feiern. Jeder liebt den, den er will und
+                der Tag sein, an dem wir die Liebe, die Freiheit und das Leben feiern. Jeder liebt den, den er will und
                 der Rest bleibt still. Ein Tag, als hätte man gewonnen. Dieser Tag wird kommen!
               </p>
 
@@ -109,7 +113,7 @@
                 Hier kommt das was wir tun werden. Wir werden Briefe schreiben, <strong>seitenweise weise sein</strong>. Werden fluchend
                 anfangen und liebevoll enden. Werden jeden Satz hassen, aber leider so meinen. Ein letztes mal lesen und
                 nie absenden. Werden dann unter Menschen erfahren wie es geht, einmal kurz nach dem Sturm mit dem Kopf
-                nicken und werden unter keinen Umständen, nie wirklich nie <strong>nachts betrunken SMS schicken</strong>.
+                nicken und werden unter keinen Umständen, nie wirklich nie nachts betrunken SMS schicken.
               </p>
 
               <p>
@@ -128,6 +132,7 @@
             <a href="#" class="cell medium-6 large-4 teaser" title="Das ist uns're Zeit">
               <div class="teaser-img-wrapper">
                 <img src="res/_demobilder/beach-1920x1200_pixabay-free.jpg" alt="" />
+                <span data-media-source="© tommydebris, pixabay" title="https://pixabay.com/photo-2850854/" aria-hidden="true"></span>
               </div>
               <div class="teaser-text-wrapper">
                 <h4>Das ist uns're Zeit</h4>
@@ -139,6 +144,7 @@
             <a href="#" class="cell medium-6 large-4 teaser" title="Paris im Herbst">
               <div class="teaser-img-wrapper">
                 <img src="res/_demobilder/bicycle-1920x1200_pixabay-free.jpg" alt="" />
+                <span data-media-source="© jill111, pixabay" title="https://pixabay.com/photo-788733/" aria-hidden="true"></span>
               </div>
               <div class="teaser-text-wrapper">
                 <h4>Paris im Herbst</h4>
@@ -150,6 +156,7 @@
             <a href="#" class="cell medium-6 large-4 teaser" title="Name an der Wand">
               <div class="teaser-img-wrapper">
                 <img src="res/_demobilder/clubs-1920x1200_pixabay-free.jpg" alt="" />
+                <span data-media-source="© designerpoint, pixabay" title="https://pixabay.com/photo-518192/" aria-hidden="true"></span>
               </div>
               <div class="teaser-text-wrapper">
                 <h4>Name an der Wand</h4>
@@ -211,12 +218,15 @@
                 <ul class="orbit-container">
                   <li class="orbit-slide is-active">
                     <img class="orbit-image" src="res/_demobilder/engagement-1920x1200_pixabay-free.jpg" alt="" />
+                    <span data-media-source="© 3194556, pixabay" title="https://pixabay.com/photo-1718244/" aria-hidden="true"></span>
                   </li>
                   <li class="orbit-slide">
                     <img class="orbit-image" src="res/_demobilder/clouds-1920x1200_pixabay-free.jpg" alt="" />
+                    <span data-media-source="© EvgeniT, pixabay" title="https://pixabay.com/photo-2619731/" aria-hidden="true"></span>
                   </li>
                   <li class="orbit-slide">
                     <img class="orbit-image" src="res/_demobilder/thin-1920x1200_pixabay-free.jpg" alt="" />
+                    <span data-media-source="© EvgeniT, pixabay" title="https://pixabay.com/photo-2902686/" aria-hidden="true"></span>
                   </li>
                 </ul>
 
