--- a/web/res/css/include/_header.scss
+++ b/web/res/css/include/_header.scss
@@ -4,6 +4,7 @@ nav {
   font-size: 1rem;
   font-weight: $global-weight-medium;
   ul ul { text-transform: none; }
+  a { color: $secondary-color; }
 }
 
 
