--- a/web/src/scss/foundation/_settings.scss
+++ b/web/src/scss/foundation/_settings.scss
@@ -60,53 +60,37 @@
 //  55. Top Bar
 //  56. Xy Grid
 
-@import '../lib/foundation/scss/util/util';
-
-
-// 0. Custom Variables
-// ---------
-
-$max-width: 1920px;
-$global-weight-medium: 400;
-$widget-margin-top: (
-  small: 3.5rem,
-  large: 5rem,
-);
-$widget-margin-bottom: (
-  small: 3.5rem,
-  large: 5rem,
-);
-
+@import '../../../../node_modules/foundation-sites/scss/util/util';
 
 // 1. Global
 // ---------
 
-$global-font-size: 16px;
+$global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #67a9dc,
-  secondary: #4e4f59,
+  primary: #1779ba,
+  secondary: #767676,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
 );
 $light-gray: #e6e6e6;
-$medium-gray: #aaa;
+$medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
-$black: #222;
-$white: #fff;
+$black: #0a0a0a;
+$white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: 'Nunito Sans', calibri, sans-serif;
+$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
 $global-position: 1rem;
-$global-weight-normal: 300;
-$global-weight-bold: 700;
+$global-weight-normal: normal;
+$global-weight-bold: bold;
 $global-radius: 0;
-$global-menu-padding: 1rem;
+$global-menu-padding: 0.7rem 1rem;
 $global-menu-nested-margin: 1rem;
 $global-text-direction: ltr;
 $global-flexbox: true;
@@ -116,6 +100,7 @@ $global-color-pick-contrast-tolerance: 0;
 $print-transparent-backgrounds: true;
 
 @include add-foundation-colors;
+$print-hrefs: true;
 
 // 2. Breakpoints
 // --------------
@@ -150,23 +135,23 @@ $header-font-family: $body-font-family;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
-$header-color: $primary-color;
-$header-lineheight: 1.15;
-$header-margin-bottom: 1rem;
+$header-color: inherit;
+$header-lineheight: 1.4;
+$header-margin-bottom: 0.5rem;
 $header-styles: (
   small: (
-    'h1': ('font-size': 36),
-    'h2': ('font-size': 36),
-    'h3': ('font-size': 26),
-    'h4': ('font-size': 20),
-    'h5': ('font-size': 18),
+    'h1': ('font-size': 24),
+    'h2': ('font-size': 20),
+    'h3': ('font-size': 19),
+    'h4': ('font-size': 18),
+    'h5': ('font-size': 17),
     'h6': ('font-size': 16),
   ),
   medium: (
-    'h1': ('font-size': 46),
-    'h2': ('font-size': 46),
-    'h3': ('font-size': 32),
-    'h4': ('font-size': 24),
+    'h1': ('font-size': 48),
+    'h2': ('font-size': 40),
+    'h3': ('font-size': 31),
+    'h4': ('font-size': 25),
     'h5': ('font-size': 20),
     'h6': ('font-size': 16),
   ),
@@ -315,6 +300,7 @@ $button-opacity-disabled: 0.25;
 $button-background-hover-lightness: -20%;
 $button-hollow-hover-lightness: -50%;
 $button-transition: background-color 0.25s ease-out, color 0.25s ease-out;
+$button-responsive-expanded: false;
 
 // 12. Button Group
 // ----------------
@@ -359,16 +345,16 @@ $closebutton-offset-horizontal: (
   medium: 1rem,
 );
 $closebutton-offset-vertical: (
-  small: 0.66rem,
-  medium: 1rem,
+  small: 0.33em,
+  medium: 0.5rem,
 );
 $closebutton-size: (
   small: 1.5em,
   medium: 2em,
 );
 $closebutton-lineheight: 1;
-$closebutton-color: $primary-color;
-$closebutton-color-hover: $secondary-color;
+$closebutton-color: $dark-gray;
+$closebutton-color-hover: $black;
 
 // 16. Drilldown
 // -------------
@@ -401,13 +387,13 @@ $dropdown-sizes: (
 // 18. Dropdown Menu
 // -----------------
 
-$dropdownmenu-arrows: false;
+$dropdownmenu-arrows: true;
 $dropdownmenu-arrow-color: $anchor-color;
 $dropdownmenu-arrow-size: 6px;
 $dropdownmenu-arrow-padding: 1.5rem;
 $dropdownmenu-min-width: 200px;
-$dropdownmenu-background: $white;
-$dropdownmenu-submenu-background: $dropdownmenu-background;
+$dropdownmenu-background: null;
+$dropdownmenu-submenu-background: $white;
 $dropdownmenu-padding: $global-menu-padding;
 $dropdownmenu-nested-margin: 0;
 $dropdownmenu-submenu-padding: $dropdownmenu-padding;
@@ -491,7 +477,6 @@ $menu-simple-margin: 1rem;
 $menu-item-color-active: $white;
 $menu-item-background-active: get-color(primary);
 $menu-icon-spacing: 0.25rem;
-$menu-item-background-hover: $light-gray;
 $menu-state-back-compat: true;
 $menu-centered-back-compat: true;
 $menu-icons-back-compat: true;
@@ -515,7 +500,7 @@ $offcanvas-sizes: (
 $offcanvas-vertical-sizes: (
   small: 250px,
 );
-$offcanvas-background: $body-background;
+$offcanvas-background: $light-gray;
 $offcanvas-shadow: 0 0 10px rgba($black, 0.7);
 $offcanvas-inner-shadow-size: 20px;
 $offcanvas-inner-shadow-color: rgba($black, 0.25);
@@ -526,21 +511,21 @@ $offcanvas-reveal-zindex: 12;
 $offcanvas-transition-length: 0.5s;
 $offcanvas-transition-timing: ease;
 $offcanvas-fixed-reveal: true;
-$offcanvas-exit-background: rgba($black, .6);
+$offcanvas-exit-background: rgba($white, 0.25);
 $maincontent-class: 'off-canvas-content';
 
 // 26. Orbit
 // ---------
 
-$orbit-bullet-background: $light-gray;
+$orbit-bullet-background: $medium-gray;
 $orbit-bullet-background-active: $dark-gray;
-$orbit-bullet-diameter: .75rem;
-$orbit-bullet-margin: .15rem;
-$orbit-bullet-margin-top: .3rem;
-$orbit-bullet-margin-bottom: 1rem;
-$orbit-caption-background: rgba($black, 0.25);
+$orbit-bullet-diameter: 1.2rem;
+$orbit-bullet-margin: 0.1rem;
+$orbit-bullet-margin-top: 0.8rem;
+$orbit-bullet-margin-bottom: 0.8rem;
+$orbit-caption-background: rgba($black, 0.5);
 $orbit-caption-padding: 1rem;
-$orbit-control-background-hover: inherit;
+$orbit-control-background-hover: rgba($black, 0.5);
 $orbit-control-padding: 1rem;
 $orbit-control-zindex: 10;
 
@@ -816,7 +801,6 @@ $tab-active-color: $primary-color;
 $tab-item-font-size: rem-calc(12);
 $tab-item-background-hover: $white;
 $tab-item-padding: 1.25rem 1.5rem;
-$tab-expand-max: 6;
 $tab-content-background: $white;
 $tab-content-border: $light-gray;
 $tab-content-color: $body-font-color;
@@ -825,7 +809,7 @@ $tab-content-padding: 1rem;
 // 52. Thumbnail
 // -------------
 
-$thumbnail-border: solid 4px $white;
+$thumbnail-border: 4px solid $white;
 $thumbnail-margin-bottom: $global-margin;
 $thumbnail-shadow: 0 0 0 1px rgba($black, 0.2);
 $thumbnail-shadow-hover: 0 0 6px 1px rgba($primary-color, 0.5);
