--- a/web/src/scss/main.scss
+++ b/web/src/scss/main.scss
@@ -10,12 +10,22 @@
 
 
 html {
-  height: 100%; 
+  height: 100%;
 }
 
 body {
-
+  position: relative;
+  overflow-y: scroll;
+  min-width: 320px;
 }
+
+.contentWrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 
 // hyphens for small screens
 @include breakpoint(medium down) {
@@ -25,9 +35,10 @@ body {
 }
 
 // Includes
-//@import "include/header";
-//@import "include/main";
-//@import "include/footer";
+@import "include/navbar";
+@import "include/header";
+@import "include/main";
+@import "include/footer";
 
 // Widgets
  
